[package]
name = "tracker-rs"
version = "1.0.1"
edition = "2021"
authors = ["m1ngsama"]
description = "A comprehensive system monitoring tool"
license = "MIT"

[dependencies]
sysinfo = "0.32"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
