[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-tracker"
version = "1.0.0"
description = "A comprehensive system monitoring tool for tracking machine health metrics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "m1ngsama"}
]
keywords = ["monitoring", "system", "performance", "metrics", "health-check"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/m1ngsama/tracker"
Repository = "https://github.com/m1ngsama/tracker"
Issues = "https://github.com/m1ngsama/tracker/issues"

[project.scripts]
tracker = "tracker:main"

[tool.setuptools]
py-modules = ["tracker", "process_monitor", "temperature_monitor", "config_manager", "alert_system", "logger", "data_exporter"]
